Update: About the Product and Team Links

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -142,6 +141,33 @@
                 </div>
             </div>
         </div>
+
+        <!--==================== ABOUT THE PRODUCT ====================-->
+        <div class="about_product" id="about_product">
+          <h2 class="services__subtitle">About The Product</h2>
+            <div class="about_product__container container">
+              <div class="about_product__data">
+                 <br><br>
+                 <div class="home__img">
+                   <iframe width="560" height="315" src="https://www.youtube.com/embed/yDSRP9_HVC8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                     </div>
+                 </div>
+            </div>
+        </div>
+
+        <!--==================== ABOUT THE TEAM ====================-->
+        <div class="about_team" id="about_team">
+            <h2 class="services__subtitle"><span>About The Team</span></h2>
+            <div class="about_team__container container">
+                <div class="about_team__data">
+                    <br><br>
+                    <div class="home__img">
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/6GuNbnp0DyE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    </div>
+            </div>
+        </div>
+
         <footer>
             <div class="social">
                 <a href="https://www.facebook.com/"><i class='bx bxl-facebook'></i></a>
@@ -160,4 +186,3 @@
 <script src="main.js"></script>
 </body>
 </html>
-
